--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,31 +1,46 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption');
-
   body{
     width: 700px;
     margin: 0 auto;
   }
   h1 + p {color: grey;
     font-family: "PT Sans",sans-serif;
-    font-size: 23px;
+    font-size: 25px;
     line-height: 25px;
-    margin-top: 10px;}
+    margin-top: 5px;}
+  h2 + p {
+    margin-top: 10px;
+  }
+  h3 + p {
+    margin-top: 10px;
+  }
   h1 {
     font-family: "PT Sans",sans-serif;
-    font-size: 40px;
+    font-size: 45px;
     font-weight: bold;
-    margin-top: 70px;
+    margin-top: 65px;
   }
   h2 {
     font-family: "PT Sans",sans-serif;
     font-size: 30px;
     font-weight: bold;
-    margin-top: 60px;
+    margin-top: 30px;
   }
   h3 {
     font-family: "PT Sans",sans-serif;
     font-size: 25px;
     font-weight: bold;
-    margin-top: 60px;
+    margin-top: 30px;
+  }
+  .quote{
+    font-family: "PT Sans",sans-serif;
+    font-size:20px;
+    font-style: italic;
+    font-weight: lighter;
+    margin-top: 10px;
+    border-left: 2px solid black;
+    padding-left: 20px;
+    margin-left: -20px;
   }
   a {color:black;}
   p {
@@ -34,13 +49,10 @@
     line-height: 25px;
     margin-top: 30px;
   }
-  q{
-    font-family: "PT Sans",sans-serif;
-    font-size:20px;
-    font-style: italic;
-    font-weight: lighter;"}
-  ul {
+  ul{
     font-family: "PT Sans",sans-serif;
     font-size: 20px;
     line-height: 25px;
+    margin-top: 30px;
+    list-style-type: disc;
   }
