--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,13 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption');
-  body{
+  img {
+    display: block;
+    width: 1020px;
+    margin: 80px auto;
+  }
+  h1, h2, h3, p, ul, a
+  {
     width: 700px;
     margin: 0 auto;
   }
-  h1 + p {color: grey;
+  h1 + p {
     font-family: "PT Sans",sans-serif;
-    font-size: 25px;
+    font-size: 30px;
     line-height: 25px;
-    margin-top: 5px;}
+    margin-top: 5px;
+    color: grey;}
   h2 + p {
     margin-top: 10px;
   }
@@ -33,6 +40,7 @@
     margin-top: 30px;
   }
   .quote{
+    width: 700px;
     font-family: "PT Sans",sans-serif;
     font-size:20px;
     font-style: italic;
@@ -40,7 +48,7 @@
     margin-top: 10px;
     border-left: 2px solid black;
     padding-left: 20px;
-    margin-left: -20px;
+    margin-left: 270px;
   }
   a {color:black;}
   p {
