--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -3,31 +3,35 @@
   body
   {
     font-family: "PT Sans",sans-serif;
-    background-image: url(../images/dc-online-media-mockup.jpg);
+    /*background-image: url(../images/dc-online-media-mockup.jpg);*/
+    /*background-image: url(../images/dc-online-media-mockup.png);*/
     background-size: 800px 20624px;
     background-position: top center;
     background-repeat: no-repeat;
-    width: 700px;
-    margin: 0 auto;
     padding-top: 65px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+  }
+  h1, h2, h3, p, ul
+  {
+    width: 700px;
+    margin: 0 auto;
+  }
+  h1, h2, h3 {
+    font-family: "PT Sans Caption",sans-serif;
+    font-weight: bold;
+  }
+  a {color:inherit;}
+  h1
+  {
+    font-size: 40px;
+    line-height: 46px;
   }
   img
   {
     display: block;
     width: 1020px;
     margin: 80px auto;
-  }
-  h1, h2, h3 {
-    font-family: "PT Sans Caption",sans-serif;
-    font-weight: bold;
-  }
-  a {color:black;}
-  h1
-  {
-    font-size: 40px;
-    line-height: 46px;
   }
   h1 + p
   {
@@ -68,14 +72,13 @@
   }
   .quote{
     width: 700px;
+    margin: 0 auto;;
     font-size:22px;
     line-height: 34px;
     font-style: italic;
     font-weight: lighter;
-    margin-top: 32px;
     border-left: 3px solid black;
     padding-left: 15px;
-    margin-left: -19px;
 
   }
   ul{
