--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,89 +1,3 @@
+@import "reset.css";
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption');
-
-  body
-  {
-    font-family: "PT Sans",sans-serif;
-    /*background-image: url(../images/dc-online-media-mockup.jpg);*/
-    /*background-image: url(../images/dc-online-media-mockup.png);*/
-    background-size: 800px 20624px;
-    background-position: top center;
-    background-repeat: no-repeat;
-    padding-top: 65px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  h1, h2, h3, p, ul
-  {
-    width: 700px;
-    margin: 0 auto;
-  }
-  h1, h2, h3 {
-    font-family: "PT Sans Caption",sans-serif;
-    font-weight: bold;
-  }
-  a {color:inherit;}
-  h1
-  {
-    font-size: 40px;
-    line-height: 46px;
-  }
-  img
-  {
-    display: block;
-    width: 1020px;
-    margin: 80px auto;
-  }
-  h1 + p
-  {
-    color: rgba(0, 0, 0, .4);
-    font-family: "PT Sans Caption",sans-serif;
-    font-size: 22px;
-    line-height: 32px;
-  }
-  h2
-  {
-    font-size: 32px;
-    font-weight: bold;
-    margin-top: 43px;
-    line-height: 36px;
-
-  }
-  p , div {
-    font-size: 22px;
-    line-height: 34px;
-  }
-  p + p
-  {
-    margin-top: 29px;
-  }
-  h3 {
-    font-size: 29px;
-    margin-top: 34px;
-    line-height: 34px;
-  }
-  h2 + p {
-    margin-top: 7px;
-  }
-  h3 + p {
-    font-size: 22px;
-    font-family: "PT Sans",sans-serif;
-    margin-top: 7px;
-    line-height: 34px;
-  }
-  .quote{
-    width: 700px;
-    margin: 0 auto;;
-    font-size:22px;
-    line-height: 34px;
-    font-style: italic;
-    font-weight: lighter;
-    border-left: 3px solid black;
-    padding-left: 15px;
-
-  }
-  ul{
-    font-size: 20px;
-    line-height: 25px;
-    margin-top: 30px;
-    list-style-type: disc;
-  }
+@import "layout.css";
