--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,3 +1,5 @@
 @import "reset.css";
-@import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Caption');
-@import "layout.css";
+@import "posts.css";
+@import "posts-item.css";
+@import "gallery.css";
+@import "responsive.css";
