--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -10,13 +10,11 @@
   display: flex;
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
-
 }
 .galleryRail figure {
   width: 100vw;
   min-width: 100vw;
 }
-
 .galleryRail img {
   display: block;
   margin: 0 auto;
@@ -27,21 +25,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   width: 100%;
   height: calc(100% - 51px);
   max-width: 1200px;
   left: 50%;
-  transform: translate(-50%, 0, 0);
-  backface-visibility: hidden;
-  z-index: 1;
+  transform: translate3d(-50%, 0, 0);
+  z-index: 5;
 }
-
 .galleryNavItem {
   position: relative;
   width: 20px;
@@ -49,7 +41,6 @@
   margin: 30px;
   cursor: pointer;
   z-index: 1;
-
 }
 .galleryNavItem::before, .galleryNavItem::after {
   content: '';
@@ -59,12 +50,10 @@
 .galleryNavItem::before {
   width: 5px;
   height: 20px;
-
 }
 .galleryNavItem::after {
   width: 20px;
   height: 5px;
-
 }
 .galleryNavItem#prev {
   -webkit-transform: rotate(-45deg);
@@ -84,8 +73,8 @@ cursor: default;
     line-height: 50px;
     text-align: center;
     color: rgba(0,0,0,.4);
+    text-decoration: underline;
 }
-
-.gallery figcaption a{
-  text-decoration: underline;
-}
+ .gallery figcaption a {
+   text-decoration: underline;
+ }
