--- a/styles/posts-item.css
+++ b/styles/posts-item.css
@@ -1,18 +1,11 @@
 @import "https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&amp;subset=cyrillic";
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption');
 
 body {
   font-family: 'PT Sans', 'Arial', sans-serif;
-
-  /*background-image: url(../img/dc-online-media-mockup.jpg);
-  background-size: 800px 20624px;
-  background-position: top center;
-  background-repeat: no-repeat; /*/
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  /*padding-top: 66px; /*/
-  min-width:  329px;
+  min-width:  329px; /* сережа сказал так сделать для min экрана */
 }
 
 * {
@@ -34,6 +27,7 @@ h1 {
   font-size: 40px;
   line-height: 46px;
   margin-bottom: 20px;
+  margin-top: 100px;
 }
 
 article img {
@@ -41,7 +35,6 @@ article img {
   width: 1020px;
   margin: 80px auto;
   margin-left: -160px;
-  /*margin: 80px 0 80px -160px; /*/
 }
 
 img + h2 {
@@ -137,6 +130,7 @@ transition: color .1s ease;
   width: 300px;
   opacity: .1;
   transition: opacity 1s ease;
+  z-index: 5;
 
 }
 
@@ -212,4 +206,9 @@ article > li {
 .list-items {
   margin-bottom: 20px;
 }
+
+iframe {
+  width: 100%;
+  margin-top: 43px;
+  height: 394px;
 }
