--- a/styles/posts.css
+++ b/styles/posts.css
@@ -1,5 +1,5 @@
 body.posts{
-  background-color: #fafafa
+  background-color: #fafafa;
 }
 
 body.posts .menubar{
@@ -15,6 +15,17 @@ body.posts .menubar{
 
 .postsFeed {
   padding: 80px 0 30px;
+}
+
+.postsFeed h2 {
+  margin-top: 10px;
+  font-size: 28px;
+  line-height: 34px;
+}
+
+.postsFeed p {
+  color: rgba(0,0,0,.5);
+  line-height: 32px;
 }
 
 .postsFeed a {
